// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiTimelineItem is rendered 1`] = `
<li
  class="emotion-euiTimelineItem-center"
>
  <div
    class="emotion-euiTimelineItemIcon-center"
  >
    <div
      class="emotion-euiTimelineItemIcon__content"
    >
      <div
        aria-label=""
        class="euiAvatar euiAvatar--m euiAvatar--user emotion-euiAvatar-m-user-subdued"
        role="img"
        title=""
      >
        <span
          class="euiAvatar__icon"
          data-euiicon-type="dot"
        />
      </div>
    </div>
  </div>
  <div
    class="emotion-euiTimelineItemEvent-center"
  >
    <p>
      I'm the children
    </p>
  </div>
</li>
`;

exports[`EuiTimelineItem props EuiAvatar is passed as an icon 1`] = `
<li
  class="emotion-euiTimelineItem-center"
>
  <div
    class="emotion-euiTimelineItemIcon-center"
  >
    <div
      class="emotion-euiTimelineItemIcon__content"
    >
      <div
        aria-label="dot"
        class="euiAvatar euiAvatar--m euiAvatar--user emotion-euiAvatar-m-user-subdued"
        role="img"
        title="dot"
      >
        <span
          class="euiAvatar__icon"
          data-euiicon-type="dot"
        />
      </div>
    </div>
  </div>
  <div
    class="emotion-euiTimelineItemEvent-center"
  >
    <p>
      I'm the children
    </p>
  </div>
</li>
`;

exports[`EuiTimelineItem props iconAriaLabel is rendered 1`] = `
<li
  class="emotion-euiTimelineItem-center"
>
  <div
    class="emotion-euiTimelineItemIcon-center"
  >
    <div
      class="emotion-euiTimelineItemIcon__content"
    >
      <div
        aria-label="icon aria label"
        class="euiAvatar euiAvatar--m euiAvatar--user emotion-euiAvatar-m-user-subdued"
        role="img"
        title="icon aria label"
      >
        <span
          class="euiAvatar__icon"
          data-euiicon-type="dot"
        />
      </div>
    </div>
  </div>
  <div
    class="emotion-euiTimelineItemEvent-center"
  >
    <p>
      I'm the children
    </p>
  </div>
</li>
`;

exports[`EuiTimelineItem props verticalAlign center is rendered 1`] = `
<li
  class="emotion-euiTimelineItem-center"
>
  <div
    class="emotion-euiTimelineItemIcon-center"
  >
    <div
      class="emotion-euiTimelineItemIcon__content"
    >
      <div
        aria-label=""
        class="euiAvatar euiAvatar--m euiAvatar--user emotion-euiAvatar-m-user-subdued"
        role="img"
        title=""
      >
        <span
          class="euiAvatar__icon"
          data-euiicon-type="dot"
        />
      </div>
    </div>
  </div>
  <div
    class="emotion-euiTimelineItemEvent-center"
  >
    <p>
      I'm the children
    </p>
  </div>
</li>
`;

exports[`EuiTimelineItem props verticalAlign top is rendered 1`] = `
<li
  class="emotion-euiTimelineItem-top"
>
  <div
    class="emotion-euiTimelineItemIcon-top"
  >
    <div
      class="emotion-euiTimelineItemIcon__content"
    >
      <div
        aria-label=""
        class="euiAvatar euiAvatar--m euiAvatar--user emotion-euiAvatar-m-user-subdued"
        role="img"
        title=""
      >
        <span
          class="euiAvatar__icon"
          data-euiicon-type="dot"
        />
      </div>
    </div>
  </div>
  <div
    class="emotion-euiTimelineItemEvent-top"
  >
    <p>
      I'm the children
    </p>
  </div>
</li>
`;
